[build-system]
requires = ["uv_build>=0.7.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "mofapy2"
version = "0.8.4"
description = "Multi-omics factor analysis"
authors = [
    { name = 'Ricard Argelaguet', email = "ricard.argelaguet@gmail.com"},
    { name = 'Damien Arnol' },
    { name = 'Britta Velten', email = "britta.velten@embl.de" },
    { name = "Danila Bredikhin", email = "danila.bredikhin@embl.de"}
]
maintainers = [
    { name = "Miles Smith", email = "miles-smith@omrf.org" }
]
license = {text = "LGPL-3.0"}
readme = {file = "README.md", content-type="text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.10",
    "h5py>=3.15.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.0,<2.5",
    "pandas>=2.3,<3.0",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https:/biofam.github.io/MOFA2/"
repository = "https://github.com/bioFAM/mofapy2"

[project.optional-dependencies]
gpu-cuda13x = [
    "cupy-cuda13x>=14.0.1",
]
gpu-cuda12x = [
    "cupy-cuda12x>=14.0.1",
]


[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
tests = [
    "codecov>=2.1.13",
    "coverage>=7.13.4",
    "nox>=2026.2.9",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
]


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["package"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]
typeguard-packages = "package"

